--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-My Page
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CS Lewis's Life</title>
+    <meta charset="utf-8">
+	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="timeline.js"></script>
+</head>
+
+<body>
+	<h1> The Life and Times of CS Lewis </h1>
+	<div id="timeline"></div>
+</body>
+
+</html>
