--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>CS Lewis's Life</title>
     <meta charset="utf-8">
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	<script src="https://rawgit.com/jiahuang/d3-timeline/master/src/d3-timeline.js"></script>
 	<script src="timeline.js"></script>
 </head>
 
