--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
 	<h1> The Life and Times of CS Lewis </h1>
-	<div id="timeline"></div>
+	<div>
+		<div id="timeline"></div>
+	</div>
+	
 </body>
 
 </html>
